# flash-chat

./: Cargo.toml
.github/workflows/: build.yml
chat_server/: Cargo.toml
chat_server/src/: config.rs  error.rs  lib.rs  main.rs
chat_server/src/handlers/: auth.rs  chat.rs  messages.rs
chat_server/src/middlewares/: auth.rs  mod.rs  request_id.rs  server_time.rs
chat_server/src/model/: chat.rs  file.rs  messages.rs  mod.rs  user.rs  workspace.rs
chat_server/src/utils/: jwt.rs
integration/: test.hurl
migrations/: 20260225122622_workspace.sql
notify_server/: Cargo.toml
notify_server/src/: lib.rs  main.rs  see.rs
sql/: init.sql
src/: lib.rs  main.rs
