[package]
name = "chat"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.8", features = ["http2", "multipart", "query", "tracing"] }
serde = "1.0.228"
serde_yaml = "0.9.34"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
